layout bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ template {
 
 :root {
   --color-primary: #1d65a6;
-  --color-secondary: #01acca;
+  --color-secondary: #099bb5;
   --color-tertiary: #f2a104;
   --color-headings: #192e5b;
   --color-body: #918ca4;
@@ -207,6 +207,12 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
   color: var(--color-body);
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.5rem;
+  }
 }
 
 h1,
@@ -340,6 +346,8 @@ a {
 .btn {
   padding: 1rem 3rem;
   text-transform: uppercase;
+  border-radius: 30px;
+  white-space: nowrap;
 }
 
 .btn .icon {
@@ -377,6 +385,13 @@ a {
   width: 100%;
   height: 4rem;
   margin-bottom: 1rem;
+  white-space: nowrap;
+  border-radius: 30px;
+}
+
+.form-check-input--profile {
+  height: 2rem;
+  width: 2rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -438,7 +453,7 @@ a {
 }
 
 .card .card--popular::before {
-  content: url(/images/badge.png);
+  content: url(/images/badge.svg);
   position: absolute;
   top: 0;
   right: 5%;
@@ -464,7 +479,16 @@ a {
 .testimonial__image {
   width: 100%;
   border-radius: 30px;
-  height: 400px;
+  height: 40rem;
+  object-fit: cover;
+}
+.testimonial__image--user {
+  width: 200px;
+  border-radius: 100%;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .quote {
@@ -558,8 +582,9 @@ a {
     transition: left 0.4s ease-in;
   }
 }
-.nav--bar--center {
-  margin-left: 6rem;
+
+.nav-item {
+  margin-left: 2rem;
 }
 
 @media screen and (min-width: 992px) {
@@ -572,6 +597,8 @@ a {
 
 .hero__image {
   width: 100%;
+  height: 40rem;
+  margin-top: 4rem;
 }
 
 .hero__content {
@@ -582,8 +609,10 @@ a {
   .hero__content {
     margin-top: 10rem;
   }
+}
+@media screen and (max-width: 480px) {
   .hero__image {
-    margin: 8rem 0;
+    margin-top: 1rem;
   }
 }
 
@@ -596,7 +625,6 @@ a {
 /* footer */
 
 .footer {
-  background: #1c1c1c;
   text-align: center;
 }
 
@@ -604,16 +632,42 @@ a {
   color: #999;
   transition: color 0.4s;
 }
-.footer a:hover {
-  color: #fff;
+.footer,
+a:hover {
+  color: #1c1c1c;
   text-decoration: none;
 }
 
 .footer__copyright {
+  color: #999;
   margin-top: 3rem;
   font-size: 2rem;
 }
 
 .footer .icon:hover {
   transform: scale(1.1);
+}
+
+.footer--padding {
+  padding: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .center {
+    margin: auto;
+    width: 70%;
+  }
+}
+
+.testimonial--color--star {
+  color: #f2a104;
+}
+
+.test {
+  margin-left: 2rem;
+}
+
+/* admin */
+.cursor {
+  cursor: pointer;
 }
